--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@formspree/react": "^2.5.1",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.11",
     "devicons-react": "^1.3.0",
     "framer-motion": "^11.2.4",
     "next": "14.2.3",
